--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "module-18-challenge",
-  "version": "1.0.0",
+  "name": "Social-Network-API",
+  "version": "1.0.1",
   "description": "Module 18 Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index",
+    "seed": "node utils/seed"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/haleytrimpert/Social-Network-API.git"
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^6.0.13"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/haleytrimpert/Social-Network-API/issues"
-  },
-  "homepage": "https://github.com/haleytrimpert/Social-Network-API#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.9"
+  }
 }
